# FYP

./: CMakeLists.txt  README.md  bag_to_rgb.cpp  generate_rgb_pc.cpp
config/: calib copy.yaml  calib.yaml  calib_rs.yaml  config_indoor.yaml  multi_calib.yaml
launch/: bag_to_pcd.launch  calib.launch  rgb_cloud.launch  rgb_pc_camera_calib.launch
src/: bag_to_rgb.cpp  capture_frame.py  generate_rgb_pc.cpp  lidar_camera_multi_calib.cpp  rgb_pc_camera_calib.cpp
